--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ input[type=time], input[type=text], input[type=date] { width:90%; padding:4px; }
 }
 li.drag-over { border: 2px dashed #f04e23; }
 </style>
+<!-- SortableJS for mobile & desktop drag-drop -->
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 <body>
 
@@ -67,13 +69,7 @@ let teams = JSON.parse(localStorage.getItem("teams")) || [
 let allData = JSON.parse(localStorage.getItem("allData")) || {};
 let selectedDate = new Date().toISOString().split("T")[0];
 const publicHolidays = ["2025-01-01","2025-03-30","2025-03-31","2025-04-01","2025-04-02","2025-06-05","2025-06-06","2025-06-07","2025-06-08","2025-06-27","2025-09-05","2025-12-02","2025-12-03","2025-12-30","2025-12-31"];
-
-// extend team objects with default site in/out if missing
-teams.forEach(team=>{
-  if(!team.siteIn) team.siteIn="";
-  if(!team.siteOut) team.siteOut="";
-});
-
+teams.forEach(team=>{ if(!team.siteIn) team.siteIn=""; if(!team.siteOut) team.siteOut=""; });
 function saveTeams(){ localStorage.setItem("teams", JSON.stringify(teams)); }
 function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData)); }
 
@@ -83,7 +79,6 @@ function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData))
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(); updateShareLink(); });
-
 const urlParams = new URLSearchParams(window.location.search);
 const dateParam = urlParams.get("date");
 if(dateParam){ selectedDate = dateParam; dateInput.value = selectedDate; }
@@ -100,18 +95,11 @@ hamburgerBtn.addEventListener("click", e=>{ e.stopPropagation(); openSidebar(); 
 overlay.addEventListener("click", closeSidebar);
 
 // ==========================
-// Drag & Drop - Only Move
+// Move Employee Function
 // ==========================
 function moveEmployeeToTeam(empId, newTeamName){
   let emp, oldTeam;
-  teams.forEach(team=>{
-    team.employees.forEach(e=>{
-      if(e.id == empId){
-        emp = e;
-        oldTeam = team;
-      }
-    });
-  });
+  teams.forEach(team=>{ team.employees.forEach(e=>{ if(e.id == empId){ emp = e; oldTeam = team; } }); });
   if(emp && emp.team !== newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e => e.id !== empId);
     const newTeam = teams.find(t => t.name === newTeamName);
@@ -125,92 +113,67 @@ function moveEmployeeToTeam(empId, newTeamName){
 }
 
 // ==========================
-// Long-Press Delete
-// ==========================
+// Long-Press Delete (pointer)
 function attachLongPressDelete(li, empId, teamName){
-  let pressTimer;
-  li.addEventListener("mousedown", () => {
-    pressTimer = setTimeout(() => {
+  let pressTimer; let startX, startY; const threshold=10;
+  li.addEventListener("pointerdown", e=>{
+    startX = e.clientX; startY = e.clientY;
+    pressTimer = setTimeout(()=>{
       if(confirm("Delete this employee?")){
-        const team = teams.find(t=>t.name === teamName);
+        const team = teams.find(t=>t.name===teamName);
         team.employees = team.employees.filter(e=>e.id !== empId);
         saveTeams();
         buildHamburgerMenu();
         buildEmployeeTable();
         updateShareLink();
       }
-    }, 800); // 800ms hold
+    }, 800);
   });
-  li.addEventListener("mouseup", ()=>clearTimeout(pressTimer));
-  li.addEventListener("mouseleave", ()=>clearTimeout(pressTimer));
+  li.addEventListener("pointermove", e=>{
+    const dx=Math.abs(e.clientX-startX), dy=Math.abs(e.clientY-startY);
+    if(dx>threshold||dy>threshold){ clearTimeout(pressTimer); pressTimer=null; }
+  });
+  li.addEventListener("pointerup", ()=>{ clearTimeout(pressTimer); pressTimer=null; });
+  li.addEventListener("pointercancel", ()=>{ clearTimeout(pressTimer); pressTimer=null; });
 }
 
 // ==========================
 // Build Hamburger Menu
-// ==========================
 function buildHamburgerMenu(){
   const menu=document.getElementById("employeeMenu"); menu.innerHTML="";
   teams.forEach(team=>{
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
-
-    const siteIn=document.createElement("input");
-    siteIn.type="time"; siteIn.value=team.siteIn||"";
-    siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); buildEmployeeTable(); };
-
-    const siteOut=document.createElement("input");
-    siteOut.type="time"; siteOut.value=team.siteOut||"";
-    siteOut.onchange=()=>{ team.siteOut=siteOut.value; saveTeams(); buildEmployeeTable(); };
-
-    const timeWrap=document.createElement("div");
-    timeWrap.innerHTML="<small>Default Site In/Out:</small><br>";
-    timeWrap.appendChild(siteIn);
-    timeWrap.appendChild(siteOut);
-    teamDiv.appendChild(timeWrap);
+    const siteIn=document.createElement("input"); siteIn.type="time"; siteIn.value=team.siteIn||""; siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); buildEmployeeTable(); };
+    const siteOut=document.createElement("input"); siteOut.type="time"; siteOut.value=team.siteOut||""; siteOut.onchange=()=>{ team.siteOut=siteOut.value; saveTeams(); buildEmployeeTable(); };
+    const timeWrap=document.createElement("div"); timeWrap.innerHTML="<small>Default Site In/Out:</small><br>"; timeWrap.appendChild(siteIn); timeWrap.appendChild(siteOut); teamDiv.appendChild(timeWrap);
 
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li");
       li.textContent = emp.name+" ("+emp.site+")";
-      li.draggable = true;
       li.dataset.empId = emp.id;
-
-      li.addEventListener("dragstart", e=>{ e.dataTransfer.setData("text/plain", emp.id); });
-      li.addEventListener("dragend", ()=>{ document.querySelectorAll("li").forEach(el=>el.classList.remove("drag-over")); });
-      li.addEventListener("dragover", e=>{ e.preventDefault(); li.classList.add("drag-over"); });
-      li.addEventListener("dragleave", ()=>{ li.classList.remove("drag-over"); });
-      li.addEventListener("drop", e=>{
-        e.preventDefault();
-        li.classList.remove("drag-over");
-        const draggedEmpId = e.dataTransfer.getData("text/plain");
-        moveEmployeeToTeam(draggedEmpId, team.name);
-      });
-
       attachLongPressDelete(li, emp.id, team.name);
-
       ul.appendChild(li);
     });
 
-    const addBtn=document.createElement("button");
-    addBtn.textContent="➕ Add Employee";
-    addBtn.onclick=()=>addEmployee(team.name);
+    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
+    teamDiv.appendChild(ul); teamDiv.appendChild(addBtn); menu.appendChild(teamDiv);
 
-    teamDiv.appendChild(ul);
-    teamDiv.appendChild(addBtn);
-    menu.appendChild(teamDiv);
-
-    ul.addEventListener("dragover", e=>e.preventDefault());
-    ul.addEventListener("drop", e=>{
-      e.preventDefault();
-      const draggedEmpId = e.dataTransfer.getData("text/plain");
-      moveEmployeeToTeam(draggedEmpId, team.name);
+    // Initialize SortableJS for each team
+    new Sortable(ul,{
+      group:'employees', animation:150,
+      onEnd: evt=>{
+        const empId = evt.item.dataset.empId;
+        const newTeamName = evt.to.dataset.team;
+        moveEmployeeToTeam(empId, newTeamName);
+      }
     });
   });
 }
 
 // ==========================
 // Add Employee
-// ==========================
 function addEmployee(teamName){
   const name=prompt("Enter employee name:"); if(!name) return;
   const site=prompt("Enter site name:")||"";
@@ -221,7 +184,6 @@ function addEmployee(teamName){
 
 // ==========================
 // Employee Table
-// ==========================
 function buildEmployeeTable(){
   const table=document.getElementById("employeeTable");
   table.innerHTML=`<tr>
@@ -237,13 +199,10 @@ function addRow(emp){
   const row=table.insertRow();
   row.insertCell(0).textContent=emp.name;
   row.insertCell(1).textContent=selectedDate;
-
   const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site; row.insertCell(2).appendChild(siteInput);
-
   const team=teams.find(t=>t.name===emp.team);
   const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team?.siteIn||""; row.insertCell(3).appendChild(inInput);
   const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team?.siteOut||""; row.insertCell(4).appendChild(outInput);
-
   const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
 
   function updateAndSave(){
@@ -259,7 +218,6 @@ function addRow(emp){
   inInput.addEventListener("change", updateAndSave);
   outInput.addEventListener("change", updateAndSave);
   siteInput.addEventListener("change", updateAndSave);
-
   calculateHours(inInput,outInput,totalCell,overtimeCell);
   const d=new Date(selectedDate);
   if([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate)) row.style.backgroundColor="yellow";
@@ -279,7 +237,6 @@ function calculateHours(inInput,outInput,totalCell,overtimeCell){
 
 // ==========================
 // Saved Dates List
-// ==========================
 function updateSavedDatesList(){
   const savedDatesList=document.getElementById("savedDatesList");
   savedDatesList.innerHTML="";
@@ -293,7 +250,6 @@ function updateSavedDatesList(){
 
 // ==========================
 // Export CSV
-// ==========================
 document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const fromDate=document.getElementById("exportFrom").value||selectedDate;
   const toDate=document.getElementById("exportTo").value||selectedDate;
@@ -301,19 +257,17 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const allDates=Object.keys(allData).sort();
   const datesToExport=allDates.filter(d=>d>=fromDate && d<=toDate);
   datesToExport.forEach(date=>{
-    teams.forEach(team=>{
-      team.employees.forEach(emp=>{
-        const empData=allData[date]?.[emp.id]; if(!empData) return;
-        let total="", overtime="";
-        if(empData.in && empData.out){
-          const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-          let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
-          total=diff.toFixed(2); const d=new Date(date);
-          overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
-        }
-        rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-      });
-    });
+    teams.forEach(team=>team.employees.forEach(emp=>{
+      const empData=allData[date]?.[emp.id]; if(!empData) return;
+      let total="", overtime="";
+      if(empData.in && empData.out){
+        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+        total=diff.toFixed(2); const d=new Date(date);
+        overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+      }
+      rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
+    }));
   });
   const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
@@ -321,7 +275,6 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 
 // ==========================
 // Google Sheet Summary Push
-// ==========================
 async function pushSummaryToGoogleSheet(){
   let site="", teamCount=0;
   teams.forEach(team=>{
@@ -331,7 +284,7 @@ async function pushSummaryToGoogleSheet(){
     }
   });
   const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
-  const webAppURL="https://script.google.com/macros/s/AKfycbz3cCt4x9T1ugWtaUZBcm3toy7sUCdndJCcqeCH5lPgVZvLp9dVNVvVmNGTmdqbmw7USg/exec"; 
+  const webAppURL="YOUR_WEB_APP_URL"; // Replace with your Google Script Web App
   try{
     const res=await fetch(webAppURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
     const result=await res.json();
@@ -342,7 +295,6 @@ async function pushSummaryToGoogleSheet(){
 
 // ==========================
 // Shareable Link
-// ==========================
 const shareLink=document.getElementById("shareLink");
 function updateShareLink(){
   const params=new URLSearchParams();
@@ -353,35 +305,13 @@ function updateShareLink(){
 
 // ==========================
 // Save Button
-// ==========================
 document.getElementById("saveBtn").addEventListener("click", ()=>{
   saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!");
 });
 
 // ==========================
-// Filtering
-// ==========================
-const searchBox = document.createElement("input");
-searchBox.type = "text";
-searchBox.placeholder = "🔍 Filter employees...";
-searchBox.style.marginLeft = "10px";
-document.querySelector("header div").prepend(searchBox);
-
-searchBox.addEventListener("input", ()=>{
-  const filter = searchBox.value.toLowerCase();
-  const rows = document.querySelectorAll("#employeeTable tr");
-  rows.forEach((row, index)=>{
-    if(index===0) return; 
-    const name = row.cells[0].textContent.toLowerCase();
-    row.style.display = name.includes(filter) ? "" : "none";
-  });
-});
-
-// ==========================
 // Initialize
-// ==========================
 buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList(); updateShareLink();
 </script>
-
 </body>
 </html>
