--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ input[type=time], input[type=text], input[type=date] { width:90%; padding:4px; }
 }
 li.drag-over { border: 2px dashed #f04e23; }
 </style>
-<!-- SortableJS for mobile & desktop drag-drop -->
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 <body>
@@ -96,7 +95,6 @@ overlay.addEventListener("click", closeSidebar);
 
 // ==========================
 // Move Employee Function
-// ==========================
 function moveEmployeeToTeam(empId, newTeamName){
   let emp, oldTeam;
   teams.forEach(team=>{ team.employees.forEach(e=>{ if(e.id == empId){ emp = e; oldTeam = team; } }); });
@@ -144,25 +142,34 @@ function buildHamburgerMenu(){
   teams.forEach(team=>{
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
-    const siteIn=document.createElement("input"); siteIn.type="time"; siteIn.value=team.siteIn||""; siteIn.onchange=()=>{ team.siteIn=siteIn.value; saveTeams(); buildEmployeeTable(); };
-    const siteOut=document.createElement("input"); siteOut.type="time"; siteOut.value=team.siteOut||""; siteOut.onchange=()=>{ team.siteOut=siteOut.value; saveTeams(); buildEmployeeTable(); };
-    const timeWrap=document.createElement("div"); timeWrap.innerHTML="<small>Default Site In/Out:</small><br>"; timeWrap.appendChild(siteIn); timeWrap.appendChild(siteOut); teamDiv.appendChild(timeWrap);
+
+    // Site In/Out Inputs + Apply to Team Button
+    const siteIn=document.createElement("input"); siteIn.type="time"; siteIn.value=team.siteIn||"";
+    const siteOut=document.createElement("input"); siteOut.type="time"; siteOut.value=team.siteOut||"";
+    const applyBtn=document.createElement("button"); applyBtn.textContent="Apply to Team"; applyBtn.onclick=()=>{
+      team.siteIn=siteIn.value; team.siteOut=siteOut.value;
+      team.employees.forEach(emp=>{
+        if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+        allData[selectedDate][emp.id].in=siteIn.value;
+        allData[selectedDate][emp.id].out=siteOut.value;
+      });
+      saveAllData(); buildEmployeeTable(); saveTeams();
+      alert("✅ Site In/Out applied to all team members");
+    };
+    const timeWrap=document.createElement("div"); timeWrap.innerHTML="<small>Default Site In/Out:</small><br>";
+    timeWrap.appendChild(siteIn); timeWrap.appendChild(siteOut); timeWrap.appendChild(applyBtn); teamDiv.appendChild(timeWrap);
 
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
-      const li=document.createElement("li");
-      li.textContent = emp.name+" ("+emp.site+")";
-      li.dataset.empId = emp.id;
-      attachLongPressDelete(li, emp.id, team.name);
-      ul.appendChild(li);
+      const li=document.createElement("li"); li.textContent = emp.name+" ("+emp.site+")"; li.dataset.empId = emp.id;
+      attachLongPressDelete(li, emp.id, team.name); ul.appendChild(li);
     });
 
     const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
     teamDiv.appendChild(ul); teamDiv.appendChild(addBtn); menu.appendChild(teamDiv);
 
-    // Initialize SortableJS for each team
-    new Sortable(ul,{
-      group:'employees', animation:150,
+    // Initialize SortableJS for each team (smooth mobile + desktop)
+    new Sortable(ul,{ group:'employees', animation:150,
       onEnd: evt=>{
         const empId = evt.item.dataset.empId;
         const newTeamName = evt.to.dataset.team;
@@ -256,19 +263,17 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
   const allDates=Object.keys(allData).sort();
   const datesToExport=allDates.filter(d=>d>=fromDate && d<=toDate);
-  datesToExport.forEach(date=>{
-    teams.forEach(team=>team.employees.forEach(emp=>{
-      const empData=allData[date]?.[emp.id]; if(!empData) return;
-      let total="", overtime="";
-      if(empData.in && empData.out){
-        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
-        total=diff.toFixed(2); const d=new Date(date);
-        overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
-      }
-      rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-    }));
-  });
+  datesToExport.forEach(date=>teams.forEach(team=>team.employees.forEach(emp=>{
+    const empData=allData[date]?.[emp.id]; if(!empData) return;
+    let total="", overtime="";
+    if(empData.in && empData.out){
+      const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+      let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+      total=diff.toFixed(2); const d=new Date(date);
+      overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+    }
+    rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
+  })));
   const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
 });
@@ -277,12 +282,7 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 // Google Sheet Summary Push
 async function pushSummaryToGoogleSheet(){
   let site="", teamCount=0;
-  teams.forEach(team=>{
-    if(team.employees.length>0){
-      teamCount+=team.employees.length;
-      team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; });
-    }
-  });
+  teams.forEach(team=>{ if(team.employees.length>0){ teamCount+=team.employees.length; team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; }); }});
   const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
   const webAppURL="YOUR_WEB_APP_URL"; // Replace with your Google Script Web App
   try{
@@ -296,22 +296,16 @@ async function pushSummaryToGoogleSheet(){
 // ==========================
 // Shareable Link
 const shareLink=document.getElementById("shareLink");
-function updateShareLink(){
-  const params=new URLSearchParams();
-  params.set("date", selectedDate);
-  shareLink.href=window.location.origin+window.location.pathname+"?"+params.toString();
-  shareLink.textContent="View Shareable Link";
-}
+function updateShareLink(){ const params=new URLSearchParams(); params.set("date", selectedDate); shareLink.href=window.location.origin+window.location.pathname+"?"+params.toString(); shareLink.textContent="View Shareable Link"; }
 
 // ==========================
 // Save Button
-document.getElementById("saveBtn").addEventListener("click", ()=>{
-  saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!");
-});
+document.getElementById("saveBtn").addEventListener("click", ()=>{ saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!"); });
 
 // ==========================
 // Initialize
 buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList(); updateShareLink();
+
 </script>
 </body>
 </html>
