--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ input[type=time], input[type=text], input[type=date], #filterInput { width:90%; 
 #savedDatesList li:hover { background:#f7931e; }
 #shareLink { margin-top:10px; display:block; color:white; background:#f7931e; padding:6px; text-align:center; border-radius:5px; text-decoration:none; }
 .employee-item { display:flex; align-items:center; justify-content:flex-start; padding:2px 4px; margin:2px 0; background:#f7931e; border-radius:4px; color:white; font-size:0.9em; }
-.employee-item button { margin-right:5px; background:red; }
+.employee-item button { margin-right:5px; background:red; color:white; border:none; border-radius:3px; cursor:pointer; }
+#overtimeSummary { margin-top:10px; font-weight:bold; color:#262e87; }
 @media(max-width:600px){
   table, th, td, input { font-size:0.8em; }
   header { flex-direction: column; align-items:flex-start; }
@@ -42,6 +43,7 @@ input[type=time], input[type=text], input[type=date], #filterInput { width:90%; 
     <input type="date" id="exportTo" title="To Date">
     <input type="text" id="filterInput" placeholder="Filter Employee Name">
   </div>
+  <div id="overtimeSummary">Total Overtime: 0 hrs</div>
 </header>
 
 <div id="overlay"></div>
@@ -76,7 +78,7 @@ function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData))
 // Date Picker
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
-dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(); updateShareLink(); });
+dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink(); });
 const urlParams = new URLSearchParams(window.location.search);
 const dateParam = urlParams.get("date");
 if(dateParam){ selectedDate = dateParam; dateInput.value=selectedDate; }
@@ -109,7 +111,7 @@ function buildHamburgerMenu(){
         allData[selectedDate][emp.id].in=team.siteIn;
         allData[selectedDate][emp.id].out=team.siteOut;
       });
-      saveAllData(); buildEmployeeTable(); saveTeams(); alert("✅ Applied to all team members");
+      saveAllData(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); saveTeams(); alert("✅ Applied to all team members");
     };
     const wrap=document.createElement("div"); wrap.innerHTML="<small>Default Site / In / Out:</small><br>";
     wrap.appendChild(siteInput); wrap.appendChild(siteInInput); wrap.appendChild(siteOutInput); wrap.appendChild(applyBtn);
@@ -120,7 +122,7 @@ function buildHamburgerMenu(){
       const li=document.createElement("li"); li.className="employee-item";
       const delBtn=document.createElement("button"); delBtn.textContent="❌"; delBtn.onclick=()=>{
         team.employees = team.employees.filter(e=>e.id!==emp.id);
-        saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+        saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
       };
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+" ("+emp.site+")"));
       li.dataset.empId = emp.id;
@@ -145,7 +147,7 @@ function addEmployee(teamName){
   const site=prompt("Enter site name:")||"";
   const employee={id:Date.now(), name, site, team:teamName};
   const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
-  saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+  saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
 }
 
 // ==========================
@@ -157,67 +159,66 @@ function moveEmployeeToTeam(empId,newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
     const newTeam = teams.find(t=>t.name===newTeamName);
     emp.team=newTeamName; newTeam.employees.push(emp);
-    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(); updateShareLink();
+    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
   }
 }
 
 // ==========================
-// Employee Table + Filter
+// Employee Table + Filter + Overtime Summary
 const filterInput=document.getElementById("filterInput");
+const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
 function buildEmployeeTable(filterText=""){
   const table=document.getElementById("employeeTable");
   table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
   if(!allData[selectedDate]) allData[selectedDate]={};
+  let totalOvertime=0;
   teams.forEach(team=>team.employees.forEach(emp=>{
-    if(emp.name.toLowerCase().includes(filterText)) addRow(emp);
+    if(emp.name.toLowerCase().includes(filterText)){
+      const row=table.insertRow();
+      row.insertCell(0).textContent=emp.name;
+      row.insertCell(1).textContent=selectedDate;
+      const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site; row.insertCell(2).appendChild(siteInput);
+      const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team.siteIn||""; row.insertCell(3).appendChild(inInput);
+      const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team.siteOut||""; row.insertCell(4).appendChild(outInput);
+      const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
+
+      function updateAndSave(){
+        calculateHours(inInput,outInput,totalCell,overtimeCell);
+        if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+        allData[selectedDate][emp.id].in=inInput.value;
+        allData[selectedDate][emp.id].out=outInput.value;
+        allData[selectedDate][emp.id].site=siteInput.value;
+        saveAllData(); updateSavedDatesList(); updateShareLink();
+      }
+      inInput.addEventListener("change", updateAndSave);
+      outInput.addEventListener("change", updateAndSave);
+      siteInput.addEventListener("change", updateAndSave);
+
+      const [totalHours,overtimeHours] = calculateHours(inInput,outInput,totalCell,overtimeCell);
+      totalOvertime += parseFloat(overtimeHours);
+    }
   }));
-  updateShareLink();
-}
-
-function addRow(emp){
-  const table=document.getElementById("employeeTable");
-  const row=table.insertRow();
-  row.insertCell(0).textContent=emp.name;
-  row.insertCell(1).textContent=selectedDate;
-  const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site; row.insertCell(2).appendChild(siteInput);
-  const team=teams.find(t=>t.name===emp.team);
-  const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team?.siteIn||""; row.insertCell(3).appendChild(inInput);
-  const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team?.siteOut||""; row.insertCell(4).appendChild(outInput);
-  const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
-
-  function updateAndSave(){
-    calculateHours(inInput,outInput,totalCell,overtimeCell);
-    if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-    allData[selectedDate][emp.id].in=inInput.value;
-    allData[selectedDate][emp.id].out=outInput.value;
-    allData[selectedDate][emp.id].site=siteInput.value;
-    saveAllData();
-  }
-  inInput.addEventListener("change", updateAndSave);
-  outInput.addEventListener("change", updateAndSave);
-  siteInput.addEventListener("change", updateAndSave);
-  calculateHours(inInput,outInput,totalCell,overtimeCell);
-  const d=new Date(selectedDate);
-  if([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate)) row.style.backgroundColor="yellow";
+  overtimeSummary.textContent = "Total Overtime: "+totalOvertime.toFixed(2)+" hrs";
 }
 
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
   const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return; }
+  if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return ["0","0"]; }
   totalCell.style.background=""; overtimeCell.style.background="";
   const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
   const d=new Date(selectedDate);
-  overtimeCell.textContent=([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+  const overtime=([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate))?diff:(diff>9?diff-9:0);
+  overtimeCell.textContent=overtime.toFixed(2);
+  return [diff.toFixed(2), overtime.toFixed(2)];
 }
 
 // ==========================
-// Saved Dates List
+// Saved Dates
 function updateSavedDatesList(){
-  const savedDatesList=document.getElementById("savedDatesList");
-  savedDatesList.innerHTML="";
+  const savedDatesList=document.getElementById("savedDatesList"); savedDatesList.innerHTML="";
   Object.keys(allData).sort((a,b)=>new Date(b)-new Date(a)).forEach(date=>{
     const li=document.createElement("li"); li.textContent=date;
     li.onclick=()=>{ selectedDate=date; dateInput.value=date; buildEmployeeTable(filterInput.value.trim().toLowerCase()); sidebar.classList.remove("open"); overlay.style.display="none"; };
@@ -248,12 +249,12 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 });
 
 // ==========================
-// Google Sheet Summary Push
+// Google Sheet Push
 async function pushSummaryToGoogleSheet(){
   let site="", teamCount=0;
   teams.forEach(team=>{ if(team.employees.length>0){ teamCount+=team.employees.length; team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; }); }});
   const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
-  const webAppURL="YOUR_WEB_APP_URL"; // Replace with your Google Script Web App
+  const webAppURL="YOUR_WEB_APP_URL"; 
   try{
     const res=await fetch(webAppURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
     const result=await res.json();
