--- a/index.html
+++ b/index.html
@@ -132,10 +132,7 @@ function buildHamburgerMenu(){
         team.employees = team.employees.filter(e=>e.id!==emp.id);
         saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
       }
-
-      // Desktop click
       delBtn.addEventListener("click", (e)=>{ e.stopPropagation(); e.preventDefault(); deleteEmployee(); });
-      // Mobile touch
       delBtn.addEventListener("touchend", (e)=>{ e.stopPropagation(); e.preventDefault(); deleteEmployee(); });
 
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+" ("+emp.site+")"));
@@ -145,12 +142,18 @@ function buildHamburgerMenu(){
     const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
     teamDiv.appendChild(ul); teamDiv.appendChild(addBtn); menu.appendChild(teamDiv);
 
-    // Drag & drop using SortableJS
-    new Sortable(ul, { group:'employees', animation:150, onEnd: evt=>{
-      const empId=evt.item.dataset.empId;
-      const newTeamName=evt.to.dataset.team;
-      moveEmployeeToTeam(empId,newTeamName);
-    }});
+    // Drag & drop using SortableJS with mobile improvements
+    new Sortable(ul, {
+      group:'employees',
+      animation:150,
+      delay:150,
+      delayOnTouchOnly:true,
+      onEnd: evt=>{
+        const empId=evt.item.dataset.empId;
+        const newTeamName=evt.to.dataset.team;
+        moveEmployeeToTeam(empId,newTeamName);
+      }
+    });
   });
 }
 
@@ -201,33 +204,41 @@ function buildEmployeeTable(filterText=""){
     const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
     function updateAndSave(){ 
       const [totalH, overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
-      totalOvertime += parseFloat(overtimeH);
       if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
       allData[selectedDate][emp.id].in=inInput.value; allData[selectedDate][emp.id].out=outInput.value;
       allData[selectedDate][emp.id].site=siteInput.value; saveAllData();
-      overtimeSummary.textContent="Total Overtime: "+totalOvertime.toFixed(2)+" hrs";
+      updateOvertimeSummary();
     }
     inInput.addEventListener("change", updateAndSave);
     outInput.addEventListener("change", updateAndSave);
     siteInput.addEventListener("change", updateAndSave);
-    calculateHours(inInput,outInput,totalCell,overtimeCell);
+    const [totalH, overtimeH] = calculateHours(inInput,outInput,totalCell,overtimeCell);
+    totalOvertime+=parseFloat(overtimeH);
   }));
-  overtimeSummary.textContent="Total Overtime: "+totalOvertime.toFixed(2)+" hrs";
+  updateOvertimeSummary();
 }
 
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
   const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return ["0","0"]; }
+  if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return [0,0]; }
   totalCell.style.background=""; overtimeCell.style.background="";
   const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
   let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
-  const d=new Date(selectedDate); 
-  const overtime=([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate))?diff:(diff>9?diff-9:0);
-  overtimeCell.textContent=overtime.toFixed(2); return [diff.toFixed(2),overtime.toFixed(2)];
+  const d=new Date(selectedDate);
+  const overtime=([5,6].includes(d.getDay())||publicHolidays.includes(selectedDate))?diff:(diff>9?(diff-9):0);
+  overtimeCell.textContent=overtime.toFixed(2);
+  return [diff,overtime];
+}
+
+function updateOvertimeSummary(){ 
+  let totalOT=0; 
+  const table=document.getElementById("employeeTable"); 
+  for(let i=1;i<table.rows.length;i++){ totalOT+=parseFloat(table.rows[i].cells[6].textContent)||0; }
+  overtimeSummary.textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
 }
 
 // ==========================
-// Saved Dates
+// Saved Dates List
 function updateSavedDatesList(){
   const savedDatesList=document.getElementById("savedDatesList"); savedDatesList.innerHTML="";
   Object.keys(allData).sort((a,b)=>new Date(b)-new Date(a)).forEach(date=>{
@@ -243,24 +254,24 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const fromDate=document.getElementById("exportFrom").value||selectedDate;
   const toDate=document.getElementById("exportTo").value||selectedDate;
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
-  const allDates=Object.keys(allData).sort();
-  const datesToExport=allDates.filter(d=>d>=fromDate && d<=toDate);
-  datesToExport.forEach(date=>teams.forEach(team=>team.employees.forEach(emp=>{
-    const empData=allData[date]?.[emp.id]; if(!empData) return;
-    let total="", overtime="";
-    if(empData.in && empData.out){
-      const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-      let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2); const d=new Date(date);
-      overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
-    }
-    rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-  })));
+  Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
+    teams.forEach(team=>team.employees.forEach(emp=>{
+      const empData=allData[date]?.[emp.id]; if(!empData) return;
+      let total="", overtime="";
+      if(empData.in && empData.out){
+        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2);
+        const d=new Date(date); overtime=([5,6].includes(d.getDay())||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+      }
+      rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
+    }));
+  });
   const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
 });
 
 // ==========================
-// Google Sheet Push
+// Google Sheet Summary Push
 async function pushSummaryToGoogleSheet(){
   let site="", teamCount=0;
   teams.forEach(team=>{ if(team.employees.length>0){ teamCount+=team.employees.length; team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; }); }});
@@ -286,6 +297,7 @@ document.getElementById("saveBtn").addEventListener("click", ()=>{ saveAllData()
 // ==========================
 // Initialize
 buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList(); updateShareLink();
+
 </script>
 
 </body>
